--- a/#9/index.html
+++ b/#9/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Eight Lecture</title>
+	<title>Ningth Lecture</title>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
 	<script src="https://unpkg.com/vue@2.5.17/dist/vue.js"></script>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -11,10 +11,10 @@
 	<div class="container mt-5">
 		<div id="app">
 			<div class="row">
-				<div class="offset-md-4 col-md-4">
-					<sidebar :number='value'></sidebar>
-					<a class="btn btn-success" @click='increment'>Add</a>
-					{{value}}
+				<div class="col-md-4">
+					<sidebar v-model='value'></sidebar>
+					<label for="parentInputBox">Parent Input Box</label>
+					<input type="text" name="form-control" v-model='value'>
 				</div>			
 			</div>
  		</div>
@@ -26,24 +26,26 @@
 		Vue.config.devtools = true;
 		Vue.component('sidebar',{
 			template:`
-				<div class="col-md-4">
-					<ul>
-						<li>{{number}}</li>
-						<li>About</li>
-						<li>Service</li>
-						<li>Jamal</li>
-					</ul>
-					<a class="btn btn-info">{{number}}</a>
-				</div>
+			<div>
+				<label for="componentInputBox">Component Input Box</label>
+				<input type="text" name="form-control" v-on:input='change(valueC)' v-model='valueC'>
+			</div>
 			`,
-			props:[
-				'number'
-			]
+			data(){
+				return {
+					valueC:''
+				}
+			},
+			methods:{
+				change(valueC){
+					return this.$emit('input',valueC);
+				},
+			},
 		});
 		new Vue({
 			el: '#app',
 			data:{
-				value:0,
+				value:'',
 			},
 			methods:{
 				increment(){
