--- a/#10/index.html
+++ b/#10/index.html
@@ -8,16 +8,13 @@
 <body>
 <br>
 <div class="container" id="app">
-	<btn @buttonIsClicked='launchModal'></btn>
-	<modal :active='activeModal'>
+	<btn @button-is-clicked='launchModal'></btn>
+	<modal :jamal='activeModal' @close_modal='close'>
 		Vue Tutorial
 		<template slot="section">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</template>
 	</modal>
 </div>
